<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_style">
    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textSize="40dp"
        android:textAlignment="center"
        android:textColor="@color/whiteBTN"
        android:textStyle="bold"
        android:fontFamily="serif-monospace"
        android:layout_marginTop="40dp"/>
    <TextView
        android:id="@+id/header2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scoreboard"
        android:layout_below="@id/header"
        android:textSize="30dp"
        android:textAlignment="center"
        android:textColor="@color/whiteBTN"
        android:textStyle="bold"
        android:fontFamily="serif-monospace"
        />
    <GridLayout
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="3"
        android:layout_below="@id/header2">
        <TextView
            android:text="Players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="italic"
            android:textColor="@color/whiteBTN"
            android:layout_marginRight="80dp"/>
        <TextView
            android:text="@string/winning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="italic"
            android:textColor="@color/whiteBTN"/>
        <TextView
            android:text="@string/losing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            android:textStyle="italic"
            android:textColor="@color/whiteBTN"/>
        <TextView
            android:text="@string/plone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="italic"
            android:textColor="@color/whiteBTN"/>
        <TextView
            android:text="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/whiteBTN"/>
        <TextView
            android:text="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/whiteBTN"/>
        <TextView
            android:text="@string/pltwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="italic"
            android:textColor="@color/whiteBTN"/>
        <TextView
            android:text="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/whiteBTN"/>
        <TextView
            android:text="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/whiteBTN"/>
    </GridLayout>
    <TextView
        android:id="@+id/total"
        android:text="Total:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_centerVertical="true"
        android:textColor="@color/YellowBTN"/>
    <TextView
        android:id="@+id/winTXT"
        android:text="The Winning is:"
        android:layout_below="@id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_centerVertical="true"
        android:textColor="@color/YellowBTN"/>
    <Button
        android:layout_marginTop="40dp"
        android:layout_below="@id/winTXT"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/goBack"
        android:background="@drawable/buttons_main"
        android:textColor="@color/whiteBTN"
        android:text="@string/goHome"
        android:textSize="20dp"
        android:layout_centerInParent="true"/>
</RelativeLayout>