<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:background="@drawable/j"
    >
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="2"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/plone"
            android:layout_marginRight="100dp"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textColor="@color/whiteBTN"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:fontFamily="serif-monospace"
            />
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/pltwo"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:textColor="@color/whiteBTN"
            android:textStyle="bold"
            android:fontFamily="serif-monospace"
            />
        <TextView
            android:id="@+id/firstPlayerName"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/DemoPlayer"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textColor="@color/whiteBTN"
            android:textStyle="bold"
            android:fontFamily="serif-monospace"
            />
        <TextView
            android:id="@+id/secondPlayerName"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/DemoPlayer"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textColor="@color/whiteBTN"
            android:textStyle="bold"
            android:fontFamily="serif-monospace"
            />
        <ImageView
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:background="@drawable/x"/>
        <ImageView
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:background="@drawable/o"/>

    </GridLayout>


    <Button
        android:id="@+id/start"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/buttons_main"
        android:onClick="onClick"
        android:padding="20dp"
        android:text="@string/start"
        android:textColor="@color/whiteBTN"
        android:textSize="20sp" />
    <Button
        android:layout_marginTop="20dp"
        android:layout_below="@+id/start"
        android:id="@+id/score"
        android:layout_centerInParent="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:onClick="onClick"
        android:padding="20dp"
        android:background="@drawable/buttons_main"
        android:textColor="@color/whiteBTN"
        android:textSize="20sp"/>
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="1"
        android:columnCount="2"
        android:layout_below="@+id/score"
        android:layout_centerHorizontal="true"
        >
        <Button
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:id="@+id/clear"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:onClick="onClick"
            android:padding="20dp"
            android:background="@drawable/buttons_main"
            android:textColor="@color/whiteBTN"
            android:textSize="20sp"/>
        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/quite"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/quite"
            android:onClick="onClick"
            android:padding="20dp"
            android:background="@drawable/buttons_main"
            android:textColor="@color/whiteBTN"
            android:textSize="20sp"/>
    </GridLayout>

</RelativeLayout>